language/move-lang/tests/move_check/expansion/standalone_mname_with_type_args.exp
error[E01010]: syntax item restricted to spec contexts
  ┌─ tests/move_check/expansion/standalone_mname_with_type_args.move:3:21
  │
3 │         let _ = 0 + M<u64>;
  │                     ^^^^^^ Expected name to be followed by a brace-enclosed list of field expressions or a parenthesized list of arguments for a function call

